fix: batch N+1 queries in reservation, email and admin bulk-delete paths (#487)
Replace per-item repository lookups/lazy-collection loads in loops with
single batched queries (id-in / join-fetch) across EmailService,
EventService/EventLocationService, allowance and admin delete paths,
and switch remaining per-item persist() calls to persistAll().